--- a/index.html
+++ b/index.html
@@ -109,16 +109,15 @@
               <div class="cta-group">
                 <a href="#!" class="btn hero-cta">See Courses</a>
                 <button class="watch-video">
-                    <div class="icon">
-                        <img src="./assets/img/play.svg" alt="" class="play">
-                    </div>
-                    <span class="text">Watch Video</span>
+                  <div class="icon">
+                    <img src="./assets/img/play.svg" alt="" class="play" />
+                  </div>
+                  <span class="text">Watch Video</span>
                 </button>
               </div>
               <p class="desc">Recent engagament</p>
               <p class="desc stats">
-                <strong>50K</strong> Students
-                <strong>70+</strong> Courses
+                <strong>50K</strong> Students <strong>70+</strong> Courses
               </p>
             </div>
           </div>
@@ -128,16 +127,15 @@
         <div class="main-content">
           <div class="popular-top">
             <div class="info">
-              <h2 class="heading lv2">
-                Our popular courses
-              </h2>
+              <h2 class="heading lv2">Our popular courses</h2>
               <p class="desc">
-                Build new skills with new trendy courses and shine for the next future career.
+                Build new skills with new trendy courses and shine for the next
+                future career.
               </p>
             </div>
             <div class="controls">
               <div class="control-btn">
-                <img src="./assets/img/chevron.svg" alt="">
+                <img src="./assets/img/chevron.svg" alt="" />
               </div>
             </div>
           </div>
@@ -145,66 +143,86 @@
             <!--Cource item 1 -->
             <div class="course-item">
               <a href="!#">
-                <img src="./assets/img/course-1.jpg" alt="" class="thumb">
+                <img src="./assets/img/course-1.jpg" alt="" class="thumb" />
               </a>
               <div class="info">
                 <div class="head">
                   <h3 class="title">
-                    Basic web design
-                  </h3>
+                      <a href="!#" class="line-clamp">Basic web design Basic web design Basic web design</a>
+                    </h3>
+                  
                   <div class="rating">
-                    <img src="./assets/img/Star 6.svg" alt="Basic web design" class="star">
+                    <img
+                      src="./assets/img/Star 6.svg"
+                      alt="Basic web design"
+                      class="star"
+                    />
                     <span class="value">4.5</span>
                   </div>
                 </div>
-                <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
+                <p class="desc  line-clamp line-2 break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
                 <div class="foot">
                   <span class="price">$120.75</span>
-                  <button class="btn">Book Now</button>
+                  <button class="btn btn-book btn-book-course-active">
+                    Book Now
+                  </button>
                 </div>
               </div>
             </div>
             <!--Cource item 2 -->
             <div class="course-item">
               <a href="!#">
-                <img src="./assets/img/course-2.jpg" alt="" class="thumb">
+                <img src="./assets/img/course-2.jpg" alt="" class="thumb" />
               </a>
               <div class="info">
                 <div class="head">
-                  <h3 class="title">
-                    UI/UX design
-                  </h3>
+                  <h3 class="title"><a href="!#" class="line-clamp">UI/UX design</a></h3>
                   <div class="rating">
-                    <img src="./assets/img/Star 6.svg" alt="UI/UX design" class="star">
+                    <img
+                      src="./assets/img/Star 6.svg"
+                      alt="UI/UX design"
+                      class="star"
+                    />
                     <span class="value">4.5</span>
                   </div>
                 </div>
-                <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
+                <p class="desc  line-clamp line-2 break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
                 <div class="foot">
                   <span class="price">$120.75</span>
-                  <button class="btn">Book Now</button>
+                  <button class="btn btn-book">Book Now</button>
                 </div>
               </div>
             </div>
             <!--Cource item 3 -->
             <div class="course-item">
               <a href="!#">
-                <img src="./assets/img/course-3.jpg" alt="" class="thumb">
+                <img src="./assets/img/course-3.jpg" alt="" class="thumb" />
               </a>
               <div class="info">
                 <div class="head">
-                  <h3 class="title">
-                    Web App design
-                  </h3>
+                  <h3 class="title"><a href="!#" class="line-clamp">Web App design</a></h3>
                   <div class="rating">
-                    <img src="./assets/img/Star 6.svg" alt="Web App design" class="star">
+                    <img
+                      src="./assets/img/Star 6.svg"
+                      alt="Web App design"
+                      class="star"
+                    />
                     <span class="value">4.5</span>
                   </div>
                 </div>
-                <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
+                <p class="desc  line-clamp line-2 break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
                 <div class="foot">
                   <span class="price">$120.75</span>
-                  <button class="btn">Book Now</button>
+                  <button class="btn btn-book">Book Now</button>
                 </div>
               </div>
             </div>
