fix: correct logo class name and update navigation link styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="main-content">
         <div class="body">
           <!--Logo-->
-          <img src="./assets/img/logo-project2.svg" alt="Lessson." class="log">
+          <img src="./assets/img/logo-project2.svg" alt="Lessson." class="logo">
           <!--Navigation-->
           <nav class="nav">
             <ul>
